--- a/page2.html
+++ b/page2.html
@@ -37,7 +37,7 @@
             }
         }
     </script>
-    <title>SB Admin 2 - Cards</title>
+    <title>Time Series</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
